--- a/config/BNL/site.cfg
+++ b/config/BNL/site.cfg
@@ -272,7 +272,7 @@ flat     1200
 PPUMP_WL      550          # wavelength to use for PPUMP images
 PPUMP_BCOUNT  25           # number of bias frames per set
 
-#ppump   200   25  1000   ppump.rcf
+ppump   200   25  1000   ppump.rcf
 #ppump   500   25  1000   ppump.rcf
 #ppump  1000   25  1000   ppump.rcf
 #ppump  5000   25  1000   ppump.rcf
