made all dark exposures equivalent and added back some steps

--- a/config/BNL/site.cfg
+++ b/config/BNL/site.cfg
@@ -85,7 +85,7 @@ DS9_SCALE     zscale
 FE55_BCOUNT     2     # number of bias frames per complete fe55 set
 FE55_DCOUNT     2     # number of dark frames per fe55 'command'
 fe55      5.0   2     # exposure time and image count for an fe55 data set
-#fe55   10.0   25     # exposure time and image count for an fe55 data set
+fe55   10.0   25     # exposure time and image count for an fe55 data set
 
 ###############################################################################
 # Dark
@@ -98,7 +98,7 @@ fe55      5.0   2     # exposure time and image count for an fe55 data set
 DARK_BCOUNT    5    # number of bias frames per dark set
 DARK_DELAY     0    # number of seconds betwen darks in a set
 dark   500.0   5    # integration time and image count for dark set
-dark    15.0  10    # integration time and image count for dark set
+#dark    15.0  10    # integration time and image count for dark set
 
 ###############################################################################
 # superflat
@@ -123,7 +123,7 @@ SFLAT_LOLIM     1.0  # minimum seconds for a fluxcal exposure
 #sflat 1000  50000  25   # ditto
 
 sflat  625   1000  25   # ditto
-#sflat  625   2000  25   # ditto
+sflat  625   2000  25   # ditto
 #sflat  625   5000  25   # ditto
 #sflat  625  10000  25   # ditto
 #sflat  625  15000  25   # ditto
