add Slit Width flux calibration file. Fixed file name format for sflat. Added more test steps to site.cfg.

--- a/config/BNL/site.cfg
+++ b/config/BNL/site.cfg
@@ -114,10 +114,10 @@ SFLAT_BCOUNT    5    # number of bias frames to take with a superflat set
 SFLAT_HILIM   120.0  # maximum seconds for a fluxcal exposure
 SFLAT_LOLIM     1.0  # minimum seconds for a fluxcal exposure
 
-#sflat  350  50000  25   # wavelength, signal(e-), count 
+sflat  350  50000  25   # wavelength, signal(e-), count 
 #sflat  450  50000  25   # ditto
-#sflat  500  50000  25   # ditto
-#sflat  625  50000  25   # ditto
+sflat  500  50000  25   # ditto
+sflat  625  50000  25   # ditto
 #sflat  750  50000  25   # ditto
 #sflat  870  50000  25   # ditto
 #sflat 1000  50000  25   # ditto
@@ -129,7 +129,7 @@ sflat  625   2000  25   # ditto
 #sflat  625  15000  25   # ditto
 
 #sflat  625   25000  500
-#sflat  625   75000  500
+sflat  625   75000  500
 #sflat  625  100000  500
 #sflat  625  125000  500
 
