--- a/config/BNL/site.cfg
+++ b/config/BNL/site.cfg
@@ -95,10 +95,10 @@ fe55   10.0   25     # exposure time and image count for an fe55 data set
 # A constant named DARK_BCOUNT is used to specifiy the number of bias images
 # to acquire as part of the data set prior to acquiring the dark images.
 # 
-DARK_BCOUNT    5    # number of bias frames per dark set
+DARK_BCOUNT    25    # number of bias frames per dark set
 DARK_DELAY     0    # number of seconds betwen darks in a set
 dark   500.0   5    # integration time and image count for dark set
-#dark    15.0  10    # integration time and image count for dark set
+dark    15.0  10    # integration time and image count for dark set
 
 ###############################################################################
 # superflat
@@ -254,11 +254,82 @@ lambda   1100   20000
 FLAT_BCOUNT   2      # number of bias frames per flat set
 FLAT_WL     675      # wavelength to use for the flats
 FLAT_HILIM  120.0    # maximum seconds for a flap field exposure
-FLAT_LOLIM    2.0    # minimum seconds for a flat field exposure
+FLAT_LOLIM    0.1    # minimum seconds for a flat field exposure
 
+flat       10       # signal level desired, in e-/pixel
+flat       20
+flat       50
+flat      100
+flat      200
 flat      300
+flat      400
+flat      500
+flat      600
 flat      700
+flat      800
+flat      900
+flat     1000
+flat     1100
 flat     1200
+flat     1300
+flat     1400
+flat     1500
+flat     2000
+flat     2500
+flat     3000
+flat     3500
+flat     4000
+flat     4500
+flat     5000
+flat     7500
+flat    10000
+flat    12000
+flat    15000
+flat    20000
+flat    25000
+flat    30000
+flat    35000
+flat    40000
+flat    45000
+flat    50000
+flat    55000
+flat    60000
+flat    65000
+flat    70000
+flat    75000
+flat    80000
+flat    85000
+flat    86000
+flat    87000
+flat    88000
+flat    89000
+flat    90000
+flat    91000
+flat    92000
+flat    93000
+flat    94000
+flat    95000
+flat   100000
+flat   105000
+flat   110000
+flat   115000
+flat   120000
+flat   125000
+flat   130000
+flat   135000
+flat   140000
+flat   145000
+flat   150000
+flat   155000
+flat   160000
+flat   165000
+flat   170000
+flat   175000
+flat   180000
+flat   185000
+flat   190000
+flat   195000
+flat   200000
 
 ################################################################################
 # Pocket Pumping
