--- a/config/BNL/site.cfg
+++ b/config/BNL/site.cfg
@@ -98,7 +98,7 @@ fe55   10.0   25     # exposure time and image count for an fe55 data set
 DARK_BCOUNT    25    # number of bias frames per dark set
 DARK_DELAY     0    # number of seconds betwen darks in a set
 dark   500.0   5    # integration time and image count for dark set
-dark    15.0  10    # integration time and image count for dark set
+#dark    15.0  10    # integration time and image count for dark set
 
 ###############################################################################
 # superflat
@@ -114,22 +114,22 @@ SFLAT_BCOUNT    5    # number of bias frames to take with a superflat set
 SFLAT_HILIM   120.0  # maximum seconds for a fluxcal exposure
 SFLAT_LOLIM     1.0  # minimum seconds for a fluxcal exposure
 
-sflat  350  50000  25   # wavelength, signal(e-), count 
+#sflat  350  50000  25   # wavelength, signal(e-), count 
 #sflat  450  50000  25   # ditto
 sflat  500  50000  25   # ditto
-sflat  625  50000  25   # ditto
+#sflat  625  50000  25   # ditto
 #sflat  750  50000  25   # ditto
 #sflat  870  50000  25   # ditto
 #sflat 1000  50000  25   # ditto
 
-sflat  625   1000  25   # ditto
-sflat  625   2000  25   # ditto
+#sflat  625   1000  25   # ditto
+#sflat  625   2000  25   # ditto
 #sflat  625   5000  25   # ditto
 #sflat  625  10000  25   # ditto
 #sflat  625  15000  25   # ditto
 
 #sflat  625   25000  500
-sflat  625   75000  500
+#sflat  625   75000  500
 #sflat  625  100000  500
 #sflat  625  125000  500
 
