added new persistance tester job harness

--- a/config/BNL/site.cfg
+++ b/config/BNL/site.cfg
@@ -95,6 +95,7 @@ fe55   10.0   25     # exposure time and image count for an fe55 data set
 # A constant named DARK_BCOUNT is used to specifiy the number of bias images
 # to acquire as part of the data set prior to acquiring the dark images.
 # 
+# NOTE: ANALYSIS REQUIRES EXPTIME TO BE EQUAL
 DARK_BCOUNT    25    # number of bias frames per dark set
 DARK_DELAY     0    # number of seconds betwen darks in a set
 dark   500.0   5    # integration time and image count for dark set
@@ -110,6 +111,7 @@ dark   500.0   5    # integration time and image count for dark set
 # A constant named SFLAT_BCOUNT is used to specifiy the number of bias images
 # to acquire as part of the data set prior to acquiring the flat field images.
 # 
+# NOTE: ANALYSIS REQUIRES SOME TAKEN AT 500nm
 SFLAT_BCOUNT    5    # number of bias frames to take with a superflat set
 SFLAT_HILIM   120.0  # maximum seconds for a fluxcal exposure
 SFLAT_LOLIM     1.0  # minimum seconds for a fluxcal exposure
@@ -356,4 +358,15 @@ ppump   200   25  1000   ppump.rcf
 FLUXCAL_TARGET  5000  # target signal level in fluxcal exposures
 FLUXCAL_HILIM   60.0  # maximum seconds for a fluxcal exposure
 FLUXCAL_LOLIM    2.0  # minimum seconds for a fluxcal exposure
+
+###############################################################################
+# Persistance tests
+#
+persist 0 300              # bias images x 300
+persist 2  20.0   5        # integration time and image count for dark set
+persist 1  0.0  50000  1   # wavelength, signal(e-), count 
+persist 2  0.0    3         # integration time and image count for dark set
+persist 2  5.0    3         # integration time and image count for dark set
+persist 2  10.0   2         # integration time and image count for dark set
+persist 2  20.0   2         # integration time and image count for dark set
 
