--- a/config/BNL/site.cfg
+++ b/config/BNL/site.cfg
@@ -362,11 +362,11 @@ FLUXCAL_LOLIM    2.0  # minimum seconds for a fluxcal exposure
 ###############################################################################
 # Persistance tests
 #
-persist 0 300              # bias images x 300
+persist 0 120 0            # bias images x 300, keep==0
+persist 0 5 1              # bias images x 300, keep==1
 persist 2  20.0   5        # integration time and image count for dark set
-persist 1  0.0  50000  1   # wavelength, signal(e-), count 
+persist 1  50000  1 0.0     # signal(e-), count, wl 
 persist 2  0.0    3         # integration time and image count for dark set
 persist 2  5.0    3         # integration time and image count for dark set
 persist 2  10.0   2         # integration time and image count for dark set
 persist 2  20.0   2         # integration time and image count for dark set
-
