--- a/config/BNL/site.cfg
+++ b/config/BNL/site.cfg
@@ -114,14 +114,14 @@ dark   500.0   5    # integration time and image count for dark set
 # NOTE: ANALYSIS REQUIRES SOME TAKEN AT 500nm
 SFLAT_BCOUNT    5    # number of bias frames to take with a superflat set
 SFLAT_HILIM   120.0  # maximum seconds for a fluxcal exposure
-SFLAT_LOLIM     1.0  # minimum seconds for a fluxcal exposure
+SFLAT_LOLIM     0.1  # minimum seconds for a fluxcal exposure
 
 #sflat  350  50000  25   # wavelength, signal(e-), count 
 #sflat  450  50000  25   # ditto
 sflat  500  50000  25   # ditto
 #sflat  625  50000  25   # ditto
 #sflat  750  50000  25   # ditto
-#sflat  870  50000  25   # ditto
+sflat  880  50000  25   # ditto
 #sflat 1000  50000  25   # ditto
 
 #sflat  625   1000  25   # ditto
