--- a/config/BNL/site.cfg
+++ b/config/BNL/site.cfg
@@ -258,19 +258,24 @@ FLAT_WL     675      # wavelength to use for the flats
 FLAT_HILIM  120.0    # maximum seconds for a flap field exposure
 FLAT_LOLIM    0.1    # minimum seconds for a flat field exposure
 
-flat       10       # signal level desired, in e-/pixel
-flat       20
-flat       50
-flat      100
-flat      200
-flat      300
-flat      400
-flat      500
-flat      600
-flat      700
-flat      800
-flat      900
+#flat       10       # signal level desired, in e-/pixel
+#flat       20
+#flat       50
+#flat      100
+#flat      200
+#flat      300
+#flat      400
+#flat      500
+#flat      600
+#flat      700
+#flat      800
+#flat      900
 flat     1000
+flat    50000
+flat   100000 
+flat   200000 
+flat   400000 
+flat   800000 
 flat     1100
 flat     1200
 flat     1300
