--- a/config/SLAC/eotest_calibrations.cfg
+++ b/config/SLAC/eotest_calibrations.cfg
@@ -1,5 +1,5 @@
-[ki-rh25]
-system_noise_file = system_noise.txt
+[dev_host]
+system_noise_file = None
 system_crosstalk_file = None
 photodiode_ratio_file = None
 illumination_non_uniformity_file = None
