--- a/config/BNL/eotest_calibrations.cfg
+++ b/config/BNL/eotest_calibrations.cfg
@@ -1,9 +1,9 @@
-[TS3-1]
+[ts3-3.inst.bnl.gov]
 system_noise_file = None
 system_crosstalk_file = None
 photodiode_ratio_file = None
 illumination_non_uniformity_file = None
-[TS3-2]
+[ts3-2.inst.bnl.gov]
 system_noise_file = None
 system_crosstalk_file = None
 photodiode_ratio_file = None
