--- a/config/BNL/site.cfg
+++ b/config/BNL/site.cfg
@@ -148,23 +148,23 @@ sflat  880  50000  25   # ditto
 LAMBDA_IMCOUNT   1    # number of images at each wavelength
 LAMBDA_BCOUNT    2    # number of bias frames per lambda set
 LAMBDA_HILIM   120.0  # maximum seconds for a fluxcal exposure
-LAMBDA_LOLIM     2.0  # minimum seconds for a fluxcal exposure
+LAMBDA_LOLIM     0.1  # minimum seconds for a fluxcal exposure
  
-#lambda   0320   10000
+lambda   0320   10000
 #lambda   0325   10000
-#lambda   0330   10000
+lambda   0330   10000
 #lambda   0335   10000
-#lambda   0340   10000
+lambda   0340   10000
 #lambda   0345   10000
-#lambda   0350   10000
+lambda   0350   10000
 #lambda   0355   10000
-#lambda   0360   10000
+lambda   0360   10000
 #lambda   0365   10000
-#lambda   0370   10000
+lambda   0370   10000
 #lambda   0375   10000
-#lambda   0380   10000
+lambda   0380   10000
 #lambda   0385   10000
-#lambda   0390   10000
+lambda   0390   10000
 #lambda   0395   10000
 lambda   0400   20000
 lambda   0405   20000
