--- a/config/BNL/site.cfg
+++ b/config/BNL/site.cfg
@@ -82,7 +82,7 @@ DS9_SCALE     zscale
 # For each command, dark images of the appropriate integration time are 
 # also acquired. The number of dark frames is set by FE55_DCOUNT.
 #
-FE55_BCOUNT     2     # number of bias frames per complete fe55 set
+FE55_BCOUNT     25     # number of bias frames per complete fe55 set
 FE55_DCOUNT     2     # number of dark frames per fe55 'command'
 fe55      5.0   2     # exposure time and image count for an fe55 data set
 fe55   10.0   25     # exposure time and image count for an fe55 data set
@@ -367,9 +367,27 @@ FLUXCAL_LOLIM    2.0  # minimum seconds for a fluxcal exposure
 ###############################################################################
 # Persistance tests
 #
-persist 0 120 0            # bias images x 300, keep==0
+PERSIST_HILIM  180.0    # maximum seconds for a flap field exposure
+PERSIST_LOLIM    0.1    # minimum seconds for a flat field exposure
+#0) Pause for ten minutes with no light on the sensor, then do a clear of the array (or equivalently take a bias frame)
+#1) Take a set of five rapid-sequence bias frames, i.e. 0 sec exposures, with no clears in between. This will be our baseline.
+#2) Take a set of three 20 sec long dark frames, with no clears in between. This measures the light leakage in the system.
+#1) take a single flat-field image at beyond saturation flux levels. This will lead to spill-over in the parallel but not serial overscan, I expect. An image taken at 4x the exposure time needed to get to one half of spill-over full well would be fine. Broadband white light would be good.
+#2) Then take a succession of dark frames with the following exposure times:
+#0 seconds
+#0 seconds
+#0 seconds
+#5 seconds
+#5 seconds
+#5 seconds
+#10 seconds
+#10 seconds
+#20 seconds
+#20 seconds
+
+#persist 0 120 0            # bias images x 300, keep==0
 persist 0 5 1              # bias images x 300, keep==1
-persist 2  20.0   5        # integration time and image count for dark set
+persist 2  20.0   3        # integration time and image count for dark set
 persist 1  50000  1 0.0     # signal(e-), count, wl 
 persist 2  0.0    3         # integration time and image count for dark set
 persist 2  5.0    3         # integration time and image count for dark set
