--- a/config/BNL/site.cfg
+++ b/config/BNL/site.cfg
@@ -29,19 +29,19 @@ CCD_TYPE    CCD250	      # CCD Model Number; CCD250, STA3800B
 
 # laboratory specific information for BNL
 LSST_LAB    BNL           # CCD testing laboratory
-TSTAND      LAB4          # CCD test stand in use
-CCD_CTRL    REFLEX        # CCD Controller in use: REFLEX, SAO, REB1, etc
+TSTAND      TS3           # CCD test stand in use
+CCD_CTRL    ARCHON        # CCD Controller in use: REFLEX, SAO, REB1, etc
 CTRL_ID     1             # CCD controller number (or other ID)
-CTRL_SYS    RTS2          # RTS2, CCS, ??
+CTRL_SYS    CCS           # RTS2, CCS, ??
 #TIM_FILE    /home/ccdtest/reflex/Timing/e2v250/545kHz_20130531a.rcf 
 INSTRUME    R0            # Test 'instrument' for FITS header
 LAMPTYPE    XENON
 SRCMODL     UNK
 MONOTYPE    Newport
-MONOMODL    66883
+MONOMODL    xxxxx
 PD_MODEL    H9876
 PD_SER      OD1234
-CTRL_SYS    RTS2          # RTS2, CCS, ??
+CTRL_SYS    CCS          # RTS2, CCS, ??
 TIM_FILE    e2v250_500khz_500ns.sig     # timing file for 'standard' images
 
 # Operating conditions
@@ -150,46 +150,6 @@ LAMBDA_BCOUNT    2    # number of bias frames per lambda set
 LAMBDA_HILIM   120.0  # maximum seconds for a fluxcal exposure
 LAMBDA_LOLIM     0.1  # minimum seconds for a fluxcal exposure
  
-lambda   0825   20000
-lambda   0840   20000
-lambda   0855   20000
-lambda   0870   20000
-lambda   0885   20000
-lambda   0900   20000
-lambda   0915   20000
-lambda   0930   20000
-lambda   0945   20000
-lambda   0950   20000
-lambda   0955   20000
-lambda   0960   20000
-lambda   0965   20000
-lambda   0970   20000
-lambda   0975   20000
-lambda   0980   20000
-lambda   0985   20000
-lambda   0990   20000
-lambda   0995   20000
-lambda   1000   20000
-lambda   1005   20000
-lambda   1010   20000
-lambda   1015   20000
-lambda   1020   20000
-lambda   1025   20000
-lambda   1030   20000
-lambda   1035   20000
-lambda   1040   20000
-lambda   1045   20000
-lambda   1050   20000
-lambda   1055   20000
-lambda   1060   20000
-lambda   1065   20000
-lambda   1070   20000
-lambda   1075   20000
-lambda   1080   20000
-lambda   1085   20000
-lambda   1090   20000
-lambda   1095   20000
-lambda   1100   20000
 lambda   0320   10000
 #lambda   0325   10000
 lambda   0330   10000
@@ -211,36 +171,76 @@ lambda   0405   20000
 lambda   0410   20000
 lambda   0415   20000
 lambda   0420   20000
-lambda   0425   20000
+#lambda   0425   20000
 lambda   0430   20000
-lambda   0435   20000
+#lambda   0435   20000
 lambda   0440   20000
-lambda   0445   20000
+#lambda   0445   20000
 lambda   0450   20000
-lambda   0465   20000
+#lambda   0465   20000
 lambda   0480   20000
-lambda   0495   20000
+lambda   0500   20000
 lambda   0510   20000
-lambda   0525   20000
+#lambda   0525   20000
 lambda   0540   20000
-lambda   0555   20000
+#lambda   0555   20000
 lambda   0570   20000
-lambda   0585   20000
+#lambda   0585   20000
 lambda   0600   20000
-lambda   0615   20000
+lambda   0620   20000
 lambda   0630   20000
-lambda   0645   20000
+#lambda   0645   20000
 lambda   0660   20000
-lambda   0675   20000
+#lambda   0675   20000
 lambda   0690   20000
-lambda   0705   20000
+#lambda   0705   20000
 lambda   0720   20000
-lambda   0735   20000
+#lambda   0735   20000
 lambda   0750   20000
-lambda   0765   20000
+#lambda   0765   20000
 lambda   0780   20000
-lambda   0795   20000
+#lambda   0795   20000
 lambda   0810   20000
+#lambda   0825   20000
+lambda   0840   20000
+lambda   0855   20000
+lambda   0870   20000
+lambda   0885   20000
+lambda   0900   20000
+lambda   0915   20000
+lambda   0930   20000
+lambda   0945   20000
+lambda   0950   20000
+lambda   0955   20000
+lambda   0960   20000
+lambda   0965   20000
+lambda   0970   20000
+lambda   0975   20000
+lambda   0980   20000
+#lambda   0985   20000
+lambda   0990   20000
+#lambda   0995   20000
+lambda   1000   20000
+#lambda   1005   20000
+lambda   1010   20000
+#lambda   1015   20000
+lambda   1020   20000
+#lambda   1025   20000
+lambda   1030   20000
+#lambda   1035   20000
+lambda   1040   20000
+#lambda   1045   20000
+lambda   1050   20000
+#lambda   1055   20000
+lambda   1060   20000
+#lambda   1065   20000
+lambda   1070   20000
+#lambda   1075   20000
+lambda   1080   20000
+#lambda   1085   20000
+lambda   1090   20000
+#lambda   1095   20000
+lambda   1100   20000
 
 ###############################################################################
 # Flat
@@ -256,31 +256,31 @@ lambda   0810   20000
 FLAT_BCOUNT   2      # number of bias frames per flat set
 FLAT_WL     675      # wavelength to use for the flats
 FLAT_HILIM  180.0    # maximum seconds for a flap field exposure
-FLAT_LOLIM    0.1    # minimum seconds for a flat field exposure
+FLAT_LOLIM    1.0    # minimum seconds for a flat field exposure
 
-flat       10       # signal level desired, in e-/pixel
-flat       20
-flat       50
-flat      100
-flat      200
-flat      300
-flat      400
-flat      500
-flat      600
-flat      700
-flat      800
-flat      900
-flat     1000
+#flat       10       # signal level desired, in e-/pixel
+#flat       20
+#flat       50
+#flat      100
+#flat      200
+#flat      300
+#flat      400
+#flat      500
+#flat      600
+#flat      700
+#flat      800
+#flat      900
+#flat     1000
 #flat    50000
 #flat   100000 
 #flat   200000 
 #flat   400000 
 #flat   800000 
-flat     1100
-flat     1200
-flat     1300
-flat     1400
-flat     1500
+#flat     1100
+#flat     1200
+#flat     1300
+#flat     1400
+#flat     1500
 flat     2000
 flat     2500
 flat     3000
@@ -336,7 +336,7 @@ flat   170000
 #flat   185000
 flat   190000
 #flat   195000
-#flat   200000
+flat   200000
 
 ################################################################################
 # Pocket Pumping
@@ -350,10 +350,10 @@ flat   190000
 PPUMP_WL      550          # wavelength to use for PPUMP images
 PPUMP_BCOUNT  25           # number of bias frames per set
 
-ppump   200   10  1000   ppump.rcf
-#ppump   500   25  1000   ppump.rcf
-#ppump  1000   25  1000   ppump.rcf
-#ppump  5000   25  1000   ppump.rcf
+ppump   200   10  1000   ppump.acf
+#ppump   500   25  1000   ppump.acf
+#ppump  1000   25  1000   ppump.acf
+#ppump  5000   25  1000   ppump.acf
 
 
 ################################################################################
