--- a/config/BNL/site.cfg
+++ b/config/BNL/site.cfg
@@ -98,7 +98,7 @@ fe55   10.0   25     # exposure time and image count for an fe55 data set
 # NOTE: ANALYSIS REQUIRES EXPTIME TO BE EQUAL
 DARK_BCOUNT    25    # number of bias frames per dark set
 DARK_DELAY     0    # number of seconds betwen darks in a set
-dark   500.0   5    # integration time and image count for dark set
+dark   500.0   2    # integration time and image count for dark set
 #dark    15.0  10    # integration time and image count for dark set
 
 ###############################################################################
@@ -217,29 +217,29 @@ lambda   0965   20000
 lambda   0970   20000
 lambda   0975   20000
 lambda   0980   20000
-#lambda   0985   20000
+lambda   0985   20000
 lambda   0990   20000
-#lambda   0995   20000
+lambda   0995   20000
 lambda   1000   20000
-#lambda   1005   20000
+lambda   1005   20000
 lambda   1010   20000
-#lambda   1015   20000
+lambda   1015   20000
 lambda   1020   20000
-#lambda   1025   20000
+lambda   1025   20000
 lambda   1030   20000
-#lambda   1035   20000
+lambda   1035   20000
 lambda   1040   20000
-#lambda   1045   20000
+lambda   1045   20000
 lambda   1050   20000
-#lambda   1055   20000
+lambda   1055   20000
 lambda   1060   20000
-#lambda   1065   20000
+lambda   1065   20000
 lambda   1070   20000
-#lambda   1075   20000
+lambda   1075   20000
 lambda   1080   20000
-#lambda   1085   20000
+lambda   1085   20000
 lambda   1090   20000
-#lambda   1095   20000
+lambda   1095   20000
 lambda   1100   20000
 
 ###############################################################################
@@ -265,22 +265,22 @@ FLAT_LOLIM    1.0    # minimum seconds for a flat field exposure
 #flat      200
 #flat      300
 #flat      400
-#flat      500
-#flat      600
-#flat      700
-#flat      800
-#flat      900
-#flat     1000
+flat      500
+flat      600
+flat      700
+flat      800
+flat      900
+flat     1000
 #flat    50000
 #flat   100000 
 #flat   200000 
 #flat   400000 
 #flat   800000 
-#flat     1100
-#flat     1200
-#flat     1300
-#flat     1400
-#flat     1500
+flat     1100
+flat     1200
+flat     1300
+flat     1400
+flat     1500
 flat     2000
 flat     2500
 flat     3000
