conforming to released requirements

--- a/config/BNL/site-draft.cfg
+++ b/config/BNL/site-draft.cfg
@@ -22,8 +22,8 @@ C  299792458               # in meters per second, in case you need it
 # also acquired. The number of dark frames is set by FE55_DCOUNT.
 #
 FE55_BCOUNT     25     # number of bias frames per complete fe55 set
-FE55_DCOUNT     0     # number of dark frames per fe55 'command'
-fe55    4.0   25     # exposure time and image count for an fe55 data set
+FE55_DCOUNT     2     # number of dark frames per fe55 'command'
+fe55    5.0   25     # exposure time and image count for an fe55 data set
 
 ###############################################################################
 # Dark
@@ -34,9 +34,10 @@ fe55    4.0   25     # exposure time and image count for an fe55 data set
 # to acquire as part of the data set prior to acquiring the dark images.
 # 
 # NOTE: ANALYSIS REQUIRES EXPTIME TO BE EQUAL
-DARK_BCOUNT    5    # number of bias frames per dark set
+DARK_BCOUNT    25    # number of bias frames per dark set
 DARK_DELAY     0    # number of seconds betwen darks in a set
-dark   500.0   5    # integration time and image count for dark set
+dark   500.0   2    # integration time and image count for dark set
+#dark    15.0  10    # integration time and image count for dark set
 
 ###############################################################################
 # superflat
@@ -49,11 +50,19 @@ dark   500.0   5    # integration time and image count for dark set
 # to acquire as part of the data set prior to acquiring the flat field images.
 # 
 # NOTE: ANALYSIS REQUIRES SOME TAKEN AT 500nm
-SFLAT_BCOUNT   0    # number of bias frames to take with a superflat set
+SFLAT_BCOUNT   25    # number of bias frames to take with a superflat set
 SFLAT_HILIM   120.0  # maximum seconds for a fluxcal exposure
 SFLAT_LOLIM     0.1  # minimum seconds for a fluxcal exposure
 
-sflat  500  50000  25   # wavelength, signal(e-), count 
+sflat  350  50000  25   # wavelength, signal(e-), count 
+sflat  450  50000  25   # ditto
+sflat  500  50000  25   # ditto
+sflat  620  50000  25   # ditto
+sflat  750  50000  25   # ditto
+sflat  870  50000  25   # ditto
+sflat 1000  50000  25   # ditto
+
+sflat  620   1000  25   # ditto
 
 ###############################################################################
 # Lambda
@@ -71,82 +80,98 @@ LAMBDA_HILIM   120.0  # maximum seconds for a fluxcal exposure
 LAMBDA_LOLIM     0.1  # minimum seconds for a fluxcal exposure
 
 lambda   0320   20000
+lambda   0325   20000
 lambda   0330   20000
+lambda   0335   20000
 lambda   0340   20000
+lambda   0345   20000
 lambda   0350   20000
+lambda   0355   20000
 lambda   0360   20000
+lambda   0365   20000
 lambda   0370   20000
+lambda   0375   20000
 lambda   0380   20000
+lambda   0385   20000
 lambda   0390   20000
+lambda   0395   20000
 lambda   0400   20000
+lambda   0405   20000
 lambda   0410   20000
+lambda   0415   20000
 lambda   0420   20000
+lambda   0425   20000
 lambda   0430   20000
+lambda   0435   20000
 lambda   0440   20000
+lambda   0445   20000
+
 lambda   0450   20000
-lambda   0460   20000
-lambda   0470   20000
+lambda   0465   20000
 lambda   0480   20000
-lambda   0490   20000
 lambda   0500   20000
 lambda   0510   20000
-lambda   0520   20000
-lambda   0530   20000
+lambda   0525   20000
 lambda   0540   20000
-lambda   0550   20000
-lambda   0560   20000
+lambda   0555   20000
 lambda   0570   20000
-lambda   0580   20000
-lambda   0590   20000
+lambda   0585   20000
 lambda   0600   20000
-lambda   0610   20000
 lambda   0620   20000
 lambda   0630   20000
-lambda   0640   20000
-lambda   0650   20000
+lambda   0645   20000
 lambda   0660   20000
-lambda   0670   20000
-lambda   0680   20000
+lambda   0675   20000
 lambda   0690   20000
-lambda   0700   20000
-lambda   0710   20000
+lambda   0705   20000
 lambda   0720   20000
-lambda   0730   20000
-lambda   0740   20000
+lambda   0735   20000
 lambda   0750   20000
-lambda   0760   20000
-lambda   0770   20000
+lambda   0765   20000
 lambda   0780   20000
-lambda   0790   20000
-lambda   0800   20000
+lambda   0795   20000
 lambda   0810   20000
-lambda   0820   20000
-lambda   0830   20000
+lambda   0825   20000
 lambda   0840   20000
-lambda   0850   20000
+lambda   0855   20000
 lambda   0870   20000
-lambda   0880   20000
-lambda   0890   20000
+lambda   0885   20000
 lambda   0900   20000
-lambda   0910   20000
-lambda   0920   20000
+lambda   0915   20000
 lambda   0930   20000
-lambda   0940   20000
+lambda   0945   20000
 lambda   0950   20000
+
+
+lambda   0955   20000
 lambda   0960   20000
+lambda   0965   20000
 lambda   0970   20000
+lambda   0975   20000
 lambda   0980   20000
+lambda   0985   20000
 lambda   0990   20000
+lambda   0995   20000
 lambda   1000   20000
+lambda   1005   20000
 lambda   1010   20000
+lambda   1015   20000
 lambda   1020   20000
+lambda   1025   20000
 lambda   1030   20000
+lambda   1035   20000
 lambda   1040   20000
+lambda   1045   20000
 lambda   1050   20000
+lambda   1055   20000
 lambda   1060   20000
+lambda   1065   20000
 lambda   1070   20000
+lambda   1075   20000
 lambda   1080   20000
+lambda   1085   20000
 lambda   1090   20000
+lambda   1095   20000
 lambda   1100   20000
 
 ###############################################################################
@@ -165,7 +190,10 @@ FLAT_WL     675      # wavelength to use for the flats
 FLAT_HILIM  240.0    # maximum seconds for a flap field exposure
 FLAT_LOLIM    0.15    # minimum seconds for a flat field exposure
 
-flat      100       # signal level desired, in e-/pixel
+flat       10       # signal level desired, in e-/pixel
+flat       20
+flat       50
+flat      100
 flat      200
 flat      300
 flat      400
@@ -240,7 +268,7 @@ flat   200000
 ################################################################################
 # Pocket Pumping
 # pocket pumping exposures
-# format:  ppump  exptime  shifts  expcount  tim_file
+# format:  ppump  wl  exptime  shifts  expcount  tim_file
 #     exptime  : exposure time for pocket pumped exposures
 #     expcount : number of images of each type to acquire
 #     shifts   : number of shifts to do per exposure
@@ -250,7 +278,9 @@ PPUMP_WL      550          # wavelength to use for PPUMP images
 PPUMP_BCOUNT  25           # number of bias frames per set
 
 ppump   200   10  1000   ppump.acf
-
+#ppump   500   25  1000   ppump.acf
+#ppump  1000   25  1000   ppump.acf
+#ppump  5000   25  1000   ppump.acf
 
 
 ################################################################################
