--- a/config/BNL/site-quick.cfg
+++ b/config/BNL/site-quick.cfg
@@ -1,4 +1,4 @@
-# site.cfg
+# site-quick.cfg
 # 
 # Configuration file for TS3 acquisition scripts
 #
@@ -23,7 +23,7 @@ C  299792458               # in meters per second, in case you need it
 #
 FE55_BCOUNT     25     # number of bias frames per complete fe55 set
 FE55_DCOUNT     0     # number of dark frames per fe55 'command'
-fe55    4.0   25     # exposure time and image count for an fe55 data set
+fe55    4.0   5     # exposure time and image count for an fe55 data set
 
 ###############################################################################
 # Dark
@@ -36,7 +36,7 @@ fe55    4.0   25     # exposure time and image count for an fe55 data set
 # NOTE: ANALYSIS REQUIRES EXPTIME TO BE EQUAL
 DARK_BCOUNT    5    # number of bias frames per dark set
 DARK_DELAY     0    # number of seconds betwen darks in a set
-dark   500.0   5    # integration time and image count for dark set
+dark   500.0   1    # integration time and image count for dark set
 
 ###############################################################################
 # superflat
@@ -53,7 +53,7 @@ SFLAT_BCOUNT   0    # number of bias frames to take with a superflat set
 SFLAT_HILIM   120.0  # maximum seconds for a fluxcal exposure
 SFLAT_LOLIM     0.1  # minimum seconds for a fluxcal exposure
 
-sflat  500  50000  25   # wavelength, signal(e-), count 
+sflat  500  50000  2   # wavelength, signal(e-), count 
 
 ###############################################################################
 # Lambda
@@ -71,82 +71,13 @@ LAMBDA_HILIM   120.0  # maximum seconds for a fluxcal exposure
 LAMBDA_LOLIM     0.1  # minimum seconds for a fluxcal exposure
 
 lambda   0320   20000
-lambda   0330   20000
-lambda   0340   20000
-lambda   0350   20000
-lambda   0360   20000
-lambda   0370   20000
-lambda   0380   20000
-lambda   0390   20000
-lambda   0400   20000
-lambda   0410   20000
 lambda   0420   20000
-lambda   0430   20000
-lambda   0440   20000
-lambda   0450   20000
-lambda   0460   20000
-lambda   0470   20000
-lambda   0480   20000
-lambda   0490   20000
-lambda   0500   20000
-lambda   0510   20000
 lambda   0520   20000
-lambda   0530   20000
-lambda   0540   20000
-lambda   0550   20000
-lambda   0560   20000
-lambda   0570   20000
-lambda   0580   20000
-lambda   0590   20000
-lambda   0600   20000
-lambda   0610   20000
 lambda   0620   20000
-lambda   0630   20000
-lambda   0640   20000
-lambda   0650   20000
-lambda   0660   20000
-lambda   0670   20000
-lambda   0680   20000
-lambda   0690   20000
-lambda   0700   20000
-lambda   0710   20000
 lambda   0720   20000
-lambda   0730   20000
-lambda   0740   20000
-lambda   0750   20000
-lambda   0760   20000
-lambda   0770   20000
-lambda   0780   20000
-lambda   0790   20000
-lambda   0800   20000
-lambda   0810   20000
 lambda   0820   20000
-lambda   0830   20000
-lambda   0840   20000
-lambda   0850   20000
-lambda   0870   20000
-lambda   0880   20000
-lambda   0890   20000
-lambda   0900   20000
-lambda   0910   20000
 lambda   0920   20000
-lambda   0930   20000
-lambda   0940   20000
-lambda   0950   20000
-lambda   0960   20000
-lambda   0970   20000
-lambda   0980   20000
-lambda   0990   20000
-lambda   1000   20000
-lambda   1010   20000
 lambda   1020   20000
-lambda   1030   20000
-lambda   1040   20000
-lambda   1050   20000
-lambda   1060   20000
-lambda   1070   20000
-lambda   1080   20000
-lambda   1090   20000
 lambda   1100   20000
 
 ###############################################################################
@@ -166,75 +97,18 @@ FLAT_HILIM  240.0    # maximum seconds for a flap field exposure
 FLAT_LOLIM    0.15    # minimum seconds for a flat field exposure
 
 flat      100       # signal level desired, in e-/pixel
-flat      200
-flat      300
-flat      400
-flat      500
-flat      600
-flat      700
-flat      800
-flat      900
 flat     1000
-flat     1100
-flat     1200
-flat     1300
-flat     1400
-flat     1500
-flat     2000
-flat     2500
-flat     3000
-flat     3500
-flat     4000
-flat     4500
 flat     5000
-flat     7500
 flat    10000
-flat    12000
-flat    15000
-flat    20000
-flat    25000
 flat    30000
-flat    35000
-flat    40000
-flat    45000
 flat    50000
-flat    55000
-flat    60000
-flat    65000
 flat    70000
-flat    75000
-flat    80000
-flat    85000
-flat    86000
-flat    87000
-flat    88000
-flat    89000
 flat    90000
-flat    91000
-flat    92000
-flat    93000
-flat    94000
-flat    95000
-flat   100000
-flat   105000
 flat   110000
-flat   115000
-flat   120000
-flat   125000
 flat   130000
 flat   135000
-flat   140000
-flat   145000
 flat   150000
-flat   155000
-flat   160000
-flat   165000
-flat   170000
-flat   175000
 flat   180000
-flat   185000
-flat   190000
-flat   195000
 flat   200000
 
 ################################################################################
@@ -249,7 +123,7 @@ flat   200000
 PPUMP_WL      550          # wavelength to use for PPUMP images
 PPUMP_BCOUNT  25           # number of bias frames per set
 
-ppump   200   10  1000   ppump.acf
+ppump   200   3  1000   ppump.acf
 
 
 
@@ -284,9 +158,9 @@ PERSIST_LOLIM    0.1    # minimum seconds for a flat field exposure
 
 #persist 0 120 0            # bias images x 300, keep==0
 persist 0 5 1              # bias images x 300, keep==1
-persist 2  20.0   3        # integration time and image count for dark set
+persist 2  20.0   1        # integration time and image count for dark set
 persist 1  50000  1 0.0     # signal(e-), count, wl 
-persist 2  0.0    3         # integration time and image count for dark set
-persist 2  5.0    3         # integration time and image count for dark set
-persist 2  10.0   2         # integration time and image count for dark set
-persist 2  20.0   2         # integration time and image count for dark set
+persist 2  0.0    1         # integration time and image count for dark set
+persist 2  5.0    1         # integration time and image count for dark set
+persist 2  10.0   1         # integration time and image count for dark set
+persist 2  20.0   1         # integration time and image count for dark set
