implement requested changes to filenames and sflat config

--- a/config/BNL/site-prod.cfg
+++ b/config/BNL/site-prod.cfg
@@ -53,6 +53,7 @@ SFLAT_BCOUNT   0    # number of bias frames to take with a superflat set
 SFLAT_HILIM   120.0  # maximum seconds for a fluxcal exposure
 SFLAT_LOLIM     0.1  # minimum seconds for a fluxcal exposure
 
+sflat  500  1000   25   # wavelength, signal(e-), count 
 sflat  500  50000  25   # wavelength, signal(e-), count 
 
 ###############################################################################
