fixing up paths in TS3-Setup prop files for new install

--- a/config/BNL/TS3-Setup2/etc/system.properties
+++ b/config/BNL/TS3-Setup2/etc/system.properties
@@ -1,3 +1,4 @@
 system.property.lsst.ccs.teststand.envirofile=/home/homer/bnlenviro.dat
 system.property.lsst.ccs.teststand.tsguidest=ts2
-system.property.lsst.ccs.teststand.fluxcalfile=/home/ts3prod/prod/harnessed-jobs/config/BNL/Slitwidth_12-Jun-2015.dat
+system.property.lsst.ccs.teststand.fluxcalfile=/opt/lsst/redhat6-x86_64-64bit-gc
+c44/prod/lsst-camera-dh/harnessed-jobs/config/BNL/Slitwidth_12-Jun-2015.dat
