fix the fix, after inserting line breaks where there shouldn't be any

--- a/config/BNL/TS3-Setup1/etc/ccsGlobal.properties
+++ b/config/BNL/TS3-Setup1/etc/ccsGlobal.properties
@@ -1,5 +1,4 @@
-org.lsst.ccs.localdb.additional.classpath.entry=/opt/lsst/redhat6-x86_64-64bit-g
-cc44/utilities/mysql-connector-java-5.1.15.jar
+org.lsst.ccs.localdb.additional.classpath.entry=/opt/lsst/redhat6-x86_64-64bit-gcc44/utilities/mysql-connector-java-5.1.15.jar
 org.lsst.ccs.subsystem.console.jython.interpreter.max.sockets=2
 lsst.ccs.teststand.envirofile=/home/homer/bnlenviro.dat
 lsst.ccs.teststand.tsguidest=ts
