--- a/config/BNL/eotest_calibrations.cfg
+++ b/config/BNL/eotest_calibrations.cfg
@@ -1,10 +1,10 @@
 [ts3-3.inst.bnl.gov]
 system_noise_file = None
 system_crosstalk_file = None
-photodiode_ratio_file = None
+photodiode_ratio_file = /opt/lsst/redhat6-x86_64-64bit-gcc44/dev/lsst-camera-dh/harnessed-jobs/config/BNL/TS3-Setup2/calib/pd_ratio_2015-09-17.txt
 illumination_non_uniformity_file = None
 [ts3-2.inst.bnl.gov]
 system_noise_file = None
 system_crosstalk_file = None
-photodiode_ratio_file = None
+photodiode_ratio_file = /opt/lsst/redhat6-x86_64-64bit-gcc44/dev/lsst-camera-dh/harnessed-jobs/config/BNL/TS3-Setup1/calib/pd_ratio_2015-09-17.txt
 illumination_non_uniformity_file = None
