--- a/config/BNL/TS3-Setup2/etc/system.properties
+++ b/config/BNL/TS3-Setup2/etc/system.properties
@@ -1,3 +1,21 @@
+#Setting Maximum memory allocation
+#system.option.Xmx2G
+#
+#Setting Minimum memory allocation
+#system.option.Xms1G
+#
+#
+#This is to overwrite the default java utils log manager
+#This is because Java utils logging looks for handlers in the System class loader
+#system.property.java.util.logging.manager=org.lsst.ccs.utilities.logging.ContextLogManager
+
+#Choose the IPv4 Stack
+system.property.java.net.preferIPv4Stack=true
+
 system.property.lsst.ccs.teststand.envirofile=/home/homer/bnlenviro.dat
 system.property.lsst.ccs.teststand.tsguidest=ts2
-system.property.lsst.ccs.teststand.fluxcalfile=/opt/lsst/redhat6-x86_64-64bit-gcc44/prod/lsst-camera-dh/harnessed-jobs/config/BNL/Slitwidth_12-Jun-2015.dat
+system.property.lsst.ccs.teststand.fluxcalfile=/opt/lsst/redhat6-x86_64-64bit-gcc44/dev/lsst-camera-dh/harnessed-jobs/config/BNL/Slitwidth_12-Jun-2015.dat
+
+#Debugging options
+#system.option.Xdebug
+#system.option.Xrunjdwp:server=y,transport=dt_socket,address=4000,suspend=n
