--- a/config/BNL/acq.cfg
+++ b/config/BNL/acq.cfg
@@ -1,4 +1,4 @@
 itl_acffile = bnl_STA_20151030-single-line.acf
 e2v_acffile = archon641-e2v.acf
-acqcfgfile = site-Andrei-SuperFlats1.cfg
+acqcfgfile = site-prod.cfg
 calfile = fluxfile.txt
