tweaks to scripts needed for running on Sisko

--- a/config/BNL/acq.cfg
+++ b/config/BNL/acq.cfg
@@ -1,4 +1,4 @@
 itl_acffile = bnl_STA_20151111-SK-single-line.acf
 e2v_acffile = archon641-e2v.acf
-acqcfgfile = site-prod.cfg
+acqcfgfile = site-Andrei-SuperFlats2.cfg
 calfile = fluxfile.txt
