--- a/config/BNL/site-Andrei-SuperFlats2.cfg
+++ b/config/BNL/site-Andrei-SuperFlats2.cfg
@@ -49,13 +49,53 @@ dark   500.0   5    # integration time and image count for dark set
 # to acquire as part of the data set prior to acquiring the flat field images.
 # 
 # NOTE: ANALYSIS REQUIRES SOME TAKEN AT 500nm
-SFLAT_BCOUNT   25    # number of bias frames to take with a superflat set
+SFLAT_BCOUNT   10    # number of bias frames to take with a superflat set
 SFLAT_HILIM   120.0  # maximum seconds for a fluxcal exposure
-SFLAT_LOLIM     0.1  # minimum seconds for a fluxcal exposure
+SFLAT_LOLIM     0.015  # minimum seconds for a fluxcal exposure
 
-#sflat  500  1000   25   # wavelength, signal(e-), count 
-sflat  625  5000  500   # wavelength, signal(e-), count 
-sflat  625  5000  1   # wavelength, signal(e-), count 
+1) 50 biases
+2) 50 x 0.03 sec
+3) 50 x 0.06 sec
+4) 50 x 0.10 sec
+5) 50 x 0.20 sec
+6) 50 x 0.40 sec
+7) 50 x 0.60 sec
+8) 50 x 0.80 sec
+9) 50 x 1.00 sec
+10) 20 x 3.00 sec
+11) 20 x 6.00 sec
+12) 5 x 20.00 sec
+13) 5 x 40.00 sec
+14) 5 x 60.00 sec
+15) 50 biases
+#.03
+sflat  625  100   50   # wavelength, signal(e-), count 
+#.06
+sflat  625  200   50   # wavelength, signal(e-), count 
+#.10
+sflat  625  300   50   # wavelength, signal(e-), count 
+#.20
+sflat  625  600   50   # wavelength, signal(e-), count 
+#.40
+sflat  625 1300   50   # wavelength, signal(e-), count 
+#.60
+sflat  625 2000   50   # wavelength, signal(e-), count 
+#.80
+sflat  625 2600   50   # wavelength, signal(e-), count 
+#1.00
+sflat  625 3300   50   # wavelength, signal(e-), count 
+#3.00
+sflat  625 9900   20   # wavelength, signal(e-), count 
+#6.00
+sflat  625 29700   20   # wavelength, signal(e-), count 
+#20.00
+sflat  625 66000   5   # wavelength, signal(e-), count 
+#40.00
+sflat  625 132000   5   # wavelength, signal(e-), count 
+#60.00
+sflat  625 198000   5   # wavelength, signal(e-), count 
+#end
+sflat  625  100   1   # wavelength, signal(e-), count 
 
 ###############################################################################
 # Lambda
