--- a/config/Harvard/TS-Setup/etc/ts.properties
+++ b/config/Harvard/TS-Setup/etc/ts.properties
@@ -1,4 +1,3 @@
-org.lsst.ccs.application.mainClass=org.lsst.ccs.startup.SubsystemBoot
-org.lsst.ccs.application.description=Run the Teststand Setup 1 subsystem
+#org.lsst.ccs.application.mainClass=org.lsst.ccs.startup.SubsystemBoot
+org.lsst.ccs.application.description=Run the Harvard Teststand subsystem
 org.lsst.ccs.application.args=--description ts__harvard --alias ts
-lsst.ccs.teststand.envirofile=/opt/ccs/output/harvardenviro.dat
