updates for handling e2v sensors

--- a/config/BNL/acq.cfg
+++ b/config/BNL/acq.cfg
@@ -1,4 +1,4 @@
 itl_acffile = bnl_STA_20151111-SK-single-line.acf
-e2v_acffile = archon641-e2v.acf
-acqcfgfile = site-Andrei-SuperFlats2.cfg
+e2v_acffile = CCD250_20151212_LOW_GAIN.acf
+acqcfgfile = site-prod.cfg
 calfile = fluxfile.txt
