--- a/config/BNL/TS3-Setup1/etc/header.properties
+++ b/config/BNL/TS3-Setup1/etc/header.properties
@@ -2,10 +2,11 @@
 # unless overiden by a command or script
 
 Origin: BNL
-CCDManufacturer: ITL
+CCDManufacturer: E2V
 TestStand: BNL-TS3-1-Sisko
 Instrument: ArchonCCDController
 MonochromaterType: Cornerstone260
-CCDModel: STA3800B
+CCDModel: E2V11093-12-01
+#CCDModel: STA3800B
 #CCDSerialManufacturer: ITL-XXX
 Tag: CCS
