--- a/config/BNL/TS3-Setup1/etc/udp_ccs.properties
+++ b/config/BNL/TS3-Setup1/etc/udp_ccs.properties
@@ -2,3 +2,9 @@ org.lsst.ccs.jgroups.ALL.UDP.bind_addr=130.199.47.170
 org.lsst.ccs.jgroups.LOG.UDP.mcast_port=26969
 org.lsst.ccs.jgroups.STATUS.UDP.mcast_port=36969
 org.lsst.ccs.jgroups.COMMAND.UDP.mcast_port=46969
+
+#Set the buffer sizes to 128K
+org.lsst.ccs.jgroups.ALL.UDP.ucast_recv_buf_size=128K
+org.lsst.ccs.jgroups.ALL.UDP.ucast_send_buf_size=128K
+org.lsst.ccs.jgroups.ALL.UDP.mcast_recv_buf_size=128K
+org.lsst.ccs.jgroups.ALL.UDP.mcast_send_buf_size=128K
