fixed minor details of cooling and pumping procedures and updated setup etc copies

--- a/config/BNL/TS3-Setup1/etc/ts__bnlts3setup1.properties
+++ b/config/BNL/TS3-Setup1/etc/ts__bnlts3setup1.properties
@@ -1,4 +1,13 @@
 
+#********  WARM//bias
+#** 
+#** type : double (example : 3.0)
+#**
+#********
+
+WARM//bias = 0.0
+
+
 #********  TEST//bias
 #** 
 #** type : double (example : 3.0)
