--- a/config/BNL/TS3-Setup2/etc/statusPersister.properties
+++ b/config/BNL/TS3-Setup2/etc/statusPersister.properties
@@ -1,6 +1,6 @@
 hibernate.connection.driver_class=com.mysql.jdbc.Driver
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
-hibernate.connection.url=jdbc:mysql://lsstdb2.rcf.bnl.gov:3306/CCSTrending
+hibernate.connection.url=jdbc:mysql://lsstdb2.rcf.bnl.gov:3306/CCSTrending2
 hibernate.connection.username=ccs
 hibernate.connection.password=vst4lsst
 hibernate.connection.provider_class=org.hibernate.connection.C3P0ConnectionProvider
