The tap order has been corrected for new sensors.  Upon load it has the clocks off. LSSTCCSTS-110

--- a/config/BNL/acq.cfg
+++ b/config/BNL/acq.cfg
@@ -1,4 +1,4 @@
 itl_acffile = bnl_STA_20151111-SK-single-line.acf
-e2v_acffile = CCD250_20151221_LOW_GAIN.acf
+e2v_acffile = CCD250_20160120a.acf
 acqcfgfile = site-prod.cfg
 calfile = fluxfile.txt
