take all the bias frames at the beginning

--- a/config/BNL/site-prod.cfg
+++ b/config/BNL/site-prod.cfg
@@ -67,7 +67,7 @@ sflat  500  50000  25   # wavelength, signal(e-), count
 # where signal is desired image signal in e-/pixel
 #
 LAMBDA_IMCOUNT   1    # number of images at each wavelength
-LAMBDA_BCOUNT    2    # number of bias frames per lambda set
+LAMBDA_BCOUNT    25   # total number of bias frames
 LAMBDA_HILIM   120.0  # maximum seconds for a fluxcal exposure
 LAMBDA_LOLIM     0.1  # minimum seconds for a fluxcal exposure
 
