TS3 QE timeout TS8 QE trial new acf file for TS3 setup with ITL active flex cables

--- a/config/BNL/acq.cfg
+++ b/config/BNL/acq.cfg
@@ -1,4 +1,4 @@
-itl_acffile = bnl_STA_20151111-SK-single-line.acf
+itl_acffile = bnl_STA_20160330.acf
 e2v_acffile = CCD250_20151221_LOW_GAIN.acf
-acqcfgfile = site-prod.cfg
+acqcfgfile = site-fe55.cfg
 calfile = fluxfile.txt
