added ITL active flex cable 550kHz acf file for TS3 updated TS8 setup files

--- a/config/BNL/acq.cfg
+++ b/config/BNL/acq.cfg
@@ -1,4 +1,4 @@
-itl_acffile = bnl_STA_20160330.acf
+itl_acffile = bnl_STA_20160404.acf
 e2v_acffile = CCD250_20151221_LOW_GAIN.acf
-acqcfgfile = site-fe55.cfg
+acqcfgfile = site-prod.cfg
 calfile = fluxfile.txt
