fixed clearing bias exptime for qe, optimised flat_acq

--- a/config/BNL/TS3-Setup1/etc/system.properties
+++ b/config/BNL/TS3-Setup1/etc/system.properties
@@ -11,6 +11,7 @@
 
 #Choose the IPv4 Stack
 system.property.java.net.preferIPv4Stack=true
+system.property.java.net.preferIPv6Addresses=false
 
 system.property.lsst.ccs.teststand.envirofile=/home/homer/bnlenviro.dat
 system.property.lsst.ccs.teststand.tsguidest=ts
