add acf files with reversed XED signals to match new XED firmware + update references to use new acf files and the new PD ratio calibration

--- a/config/BNL/acq.cfg
+++ b/config/BNL/acq.cfg
@@ -1,4 +1,4 @@
-itl_acffile = bnl_STA_20160404.acf
-e2v_acffile = CCD250_20151221_LOW_GAIN.acf
+itl_acffile = bnl_STA_20160404-reversed-XED2.acf
+e2v_acffile = CCD250_20151221_LOW_GAIN-reversed-XED2.acf
 acqcfgfile = site-prod.cfg
 calfile = fluxfile.txt
