added new acf file for A style ITL sensors

--- a/config/BNL/acq.cfg
+++ b/config/BNL/acq.cfg
@@ -1,4 +1,4 @@
-itl_acffile = bnl_STA_20160718_B.acf
+itl_acffile = bnl_STA_20160722_A.acf
 e2v_acffile = CCD250_20160512_LOW_GAIN-reversed-xed.acf
 acqcfgfile = site-prod.cfg
 calfile = fluxfile.txt
