--- a/config/BNL/acq.cfg
+++ b/config/BNL/acq.cfg
@@ -1,4 +1,4 @@
-itl_acffile = bnl_STA_20160728_A.acf
+itl_acffile = bnl_STA_20160803_A_OG-0V.acf
 e2v_acffile = CCD250_20160512_LOW_GAIN-reversed-xed.acf
 acqcfgfile = site-prod.cfg
 calfile = fluxfile.txt
