added acf files for ITL 64 and 50 overscan geometries

--- a/config/BNL/acq.cfg
+++ b/config/BNL/acq.cfg
@@ -1,4 +1,4 @@
-itl_acffile = bnl_STA_20160828_A.acf
+itl_acffile = bnl_STA_20160917_A.acf
 e2v_acffile = CCD250_20160512_LOW_GAIN-reversed-xed.acf
-acqcfgfile = site-prod.cfg
+acqcfgfile = site-prod-fetst.cfg
 calfile = fluxfile.txt
